# backtesting-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  ai_analyst.py  api.py  config.py  docker-compose.yml  frontend.py  optimizer.py  portfolio_optimizer.py  pyproject.toml  requirements.txt  results_db.py  setup.py  strategies.py  strategy_registry.py  utils.py
backtesting/: __init__.py  _core.pyx  _tick_core.pyx  allocation.py  backtest.py  broker.py  data.py  indicators.py  latency_broker.py  latency_metrics.py  latency_models.py  order.py  order_book.py  plot.py  portfolio.py  portfolio_backtest.py  statistics.py  strategy.py  tick.py  tick_backtest.py  types.py  utils.py  vectorized.py  vectorized_signals.py
benchmarks/: bench_engines.py  bench_tick.py
docs/: backtester_engineering.md  research.md
examples/: demo.py  order_book_demo.py  portfolio_demo.py  tick_latency_demo.py
ohlc_data/: BTCUSD_D1.csv  EURUSD_D1.csv  GBPUSD_D1.csv  GER40_D1.csv  NDX100_D1.csv  SPX500_D1.csv  USOUSD_D1.csv  XAUUSD_D1.csv
strategies/: __init__.py  base.py  donchian.py  mean_reversion.py  momentum.py  trend_following.py
tests/: conftest.py  test_backtest.py  test_broker.py  test_contamination.py  test_cross_engine.py  test_data_validation.py  test_funding_costs.py  test_latency_broker.py  test_latency_metrics.py  test_latency_models.py  test_market_impact.py  test_optimizer.py  test_order_book.py  test_portfolio.py  test_portfolio_backtest.py  test_results_db.py  test_statistics.py  test_strategies.py  test_tick.py  test_types.py  test_utils.py  (+1 more)
(+1 files in other folders)
